--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Advanced Chat UI</title>
+    <title>Chat UI</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -47,3 +47,4 @@
 
 </body>
 </html>
+
